chore: update with okdp-server model api
